# FIDASIM

./: .env.prod.example  .gitattributes  .gitignore  .travis.yml  .travis_key.enc  CHANGELOG.md  DEPLOYMENT_GUIDE.md  LICENCE.md  QUICK_REFERENCE.md  README.md  README_DEPLOYMENT.md  WEB_PLATFORM_FILES.md  dalpha_inputs.pro  deploy.sh  docker-compose.prod.yaml  fidasim.f90  index.html  load_fidasim_results.pro  makefile  makefile_d3d  makefile_nstx  openacc_errors.txt  plot_birth.pro  plot_dalpha_inputs.pro  plot_fidasim_neutrals.pro  plot_fidasim_spectra.pro  plot_npa.pro  prefida.pro  q  readme_molecules_cross_sections.txt  search.html  start_birthsim.pro  start_fidasim.pro  start_npasim.pro  transp_fbeam.pro
AUGD/: augd_input.pro  augd_npa.pro  augd_plots.pro  augd_routines.pro  cfr_setup.pro  libdefine.pro  load_bfield.pro  load_transp_profiles.pro  nbi_data.pro  nbi_geometry_transp.pro  npa_setup.pro
D3D/: d3d_beams.pro  d3d_chords.pro  d3d_equil.pro  d3d_input.json  d3d_input.pro  d3d_plots.pro  d3d_profiles.pro  d3d_routines.pro  d3d_startup.pro  get_beam_powers.pro  get_beam_volts.pro  oblique_spatial.pro
EAST/: contour_psi.pro  create_transp_profiles.pro  east_beams.pro  east_chords.pro  east_equil.pro  east_input.pro  east_plots.pro  east_routines.pro  fluxmap.pro  get_beam_power.pro  linspace.pro  metric.pro  qsimpv.pro  read_netcdf_data.pro  readg.pro  rho_rz.pro
LIB/: calc_mean_fbm.pro  calc_npa.pro  calc_spectra.pro  edit_namelist  (+27 more)
test/unit_tests/: CMakeLists.txt  README.md  testSuites.inc  test_eigensystem.pf  test_fidasim.pf  test_utilities.pf
(+2514 files in other folders)
